
EXTRA_DIST = \
    calcaddins.cpp \
    calcaddins.hpp \
    calcaddins.idl \
    calcutils.cpp \
    calcutils.hpp \
    conversions.cpp \
    conversions.hpp \
    credit_fix.cpp \
    environment.bat \
    environment.sh \
    handles.cpp \
    handles.hpp \
    HOWTO.TXT \
    init.cpp \
    init.hpp \
    loop.hpp \
    Makefile \
    Makefile.am \
    Makefile.in \
    Makefile.oo \
    piecewiseyieldcurve_fix.cpp \
    qladdin.cpp \
    qladdin.hpp \
    qldefs.hpp \
    Readme.txt \
    symbols.txt \
    termstructures_fix.cpp

